test: add unit tests for EmployeeSearchValidator
Implement comprehensive test scenarios for search criteria validation:
- Verify successful validation when at least one filter is provided.
- Assert BusinessValidationException when no search filters are present.
- Assert validation failure for invalid document number length.